# visit-service

./: Cargo.toml  Dockerfile
src/: app.rs  db.rs  http_client.rs  main.rs  models.rs
src/app/: routes.rs  token_extractor.rs
src/app/routes/: healthcheck.rs  visits.rs
src/db/: schemas.rs
src/db/schemas/: visit.rs
