[package]
name = "visit-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
axum-macros = "0.3.0"
tokio = "1"
tracing-subscriber = "0.3"
tracing = "0.1"
mongodb = {version = "2.3.1", features = ["bson-chrono-0_4"]}
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
anyhow = "1.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
futures = "0.3.25"
chrono = "0.4.23"
enum-as-inner = "0.5.1"
